Update project to JDK 16